# Robotone

./: .gitignore  HLint.hs  LICENSE  README.md  README.txt  README.txt.old  count.sh  eachcount.sh  open.sh  out.txt  robotone.cabal  run.sh  runi.sh  screen.sh  stack.yaml
app/: Main.hs
src/: ApplyingMoves.hs  DeletionMoves.hs  Expansion.hs  Library.hs  Main.hs  Match.hs  Move.hs  Parser.hs  Printing.hs  Rename.hs  RobotM.hs  Suspension.hs  TestData.hs  TestData2.hs  Tex.hs  TexBase.hs  TidyingMoves.hs  Types.hs  Writeup.hs
